updated changeog. added foodcritic submodules for linting. added tests

--- a/templates/default/ec2-consistent-snapshot.erb
+++ b/templates/default/ec2-consistent-snapshot.erb
@@ -8,4 +8,4 @@ ec2-consistent-snapshot \
 <% if @mysql_socket -%>
 --mysql-socket=<%= @mysql_socket %> \
 <% end -%>
-<%= @volumes.join(" ") %>
+<%= @volumes.join(' ') %>
