added mysql user pass atts to LWRP call. Added bashtimestamp to description. added cron mailto

--- a/templates/default/ec2-consistent-snapshot.erb
+++ b/templates/default/ec2-consistent-snapshot.erb
@@ -40,7 +40,7 @@ ec2-consistent-snapshot \
 --<%= o %>=<%= v %> \
         <% end -%>
     <% end -%>
---description "<%= @description %>" \
+--description "<%= "#{@description} $(date +'%Y-%m-%d %H:%M:%S')" %>" \
 --region <%= @region %> \
 --freeze-filesystem <%= @freeze_filesystem.join(' ') %> \
 <%= @volumes.join(' ') %>
